<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".ToDoActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="#191818" />

        <EditText
            android:id="@+id/etNev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Description"
            android:inputType="text"
            android:textColor="#0B0B0B" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/etEv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Year"
            android:textColor="#070707" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textColor="#0B0B0B" />

        <EditText
            android:id="@+id/month_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#090909" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textColor="#090909" />

        <EditText
            android:id="@+id/etNap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Day"
            android:inputType="text"
            android:textColor="#050505" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="megsem"
            android:text="@string/cancel"
            android:textColor="@color/black"
            app:rippleColor="@color/purple_200" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="clicked"
            android:text="@string/save"
            android:textColor="@color/black"
            app:rippleColor="@color/purple_200" />


    </LinearLayout>
</LinearLayout>