<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_marginEnd="0dp"
    android:background="@color/white"
    android:orientation="horizontal">

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAllCaps="true"
            android:textColor="#0B0B0B"
            android:textSize="24sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAllCaps="false"
            android:textColor="#050505"
            android:textSize="15sp">

        </TextView>


    </LinearLayout>

    <CheckBox
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:buttonTint="#100F0F"
        android:text="@string/completed" />
</LinearLayout>